samples/_failures_safe/1761668170_7237b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ffd26ff.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_2ffd26ff.c:163:12: error: expected expression at end of input
  163 |     struct GraphNode *start_node =
      |            ^~~~~~~~~
./samples/SAFE/__tmp_2ffd26ff.c:163:12: error: expected declaration or statement at end of input
